--- a/css/main.css
+++ b/css/main.css
@@ -441,10 +441,11 @@ template {
   justify-content: space-between;
   background-color: #091921;
   max-width: 500px;
-  max-width: 100%;
+  width: 100%;
   min-height: 100%;
   -webkit-transition: all .3s ease-in-out 0s;
   transition: all .3s ease-in-out 0s;
+  border-right: 5px solid;
 }
 
 .header.active {
@@ -521,9 +522,8 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -550,9 +550,10 @@ template {
 }
 
 .header__social_icon,
-.header__social_icon_hover {
-  width: 80px;
-  height: 80px;
+.header__social_icon_hover,
+.header__social_link {
+  width: 50px;
+  height: 50px;
 }
 
 .header__social_icon {
